tests/NormalTests/paczka1/fuzzy1/45955780.err
Error in line 3: A78VRI2fwN A680 69,6
Error in line 14: LegSPT S175 63,8
Error in line 12: S569 A639 25,8
Error in line 19: AXh3cup3Ew S569 242,5
Error in line 16: u9v2uxhVv7 A680 94,0
Error in line 35: S569 S569 52,7
